--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -1,7 +1,7 @@
 {
   "extends": "./tsconfig.base.json",
   "include": ["src"],
-  "exclude": ["test/mock", "src/package.json", "src/jsx"],
+  "exclude": ["test/mock", "src/package.json"],
   "compilerOptions": {
     "outDir": "lib/cjs",
     "module": "CommonJS",
