--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "jest.jestCommandLine": "NODE_OPTIONS=\"--experimental-vm-modules\" node_modules/.bin/jest",
   "jest.autoRun": "off",
-  "cSpell.words": ["Logit", "sexp"],
+  "cSpell.words": ["Adeptus", "Logit", "sexp"],
   "typescript.preferences.importModuleSpecifier": "relative",
   "typescript.preferences.importModuleSpecifierEnding": "js",
 
